# Debugging-idl

./: AUTO_GRADING_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  EDGE_FUNCTIONS_EXPLAINED.md  FIXED_PROGRAM_IDS.md  FRONTEND_QUIZ_FIX_COMPLETE.md  FRONTEND_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  MRE_Arcium_Array_Arguments.md  MRE_Arcium_SignPDA_Issue.md  MRE_MXE_Initialization_Cluster_Offset_Conflict.md  MRE_Transaction_Size_And_Double_Signing.md  QUIZ_FIX_INSTRUCTIONS.md  README.md  SOLUTION_REQUEST_FOR_ARCIUM.md  current_broken_idl.json  old_working_idl.json  package_json.txt  push_mres.sh  push_to_github.sh  rust_program_sample.rs  useAnchorProgram.ts  verify_onchain.js
se_qure/: Anchor.toml  Cargo.toml  DEPLOYMENT_PROCEDURE.md  NICO_ARRAY_FIX_IMPLEMENTATION.md  check_bytecode_accounts.js  check_circuit_urls.js  check_idl.js  check_v2_names.js  create_and_upload.js  debug_deployment.sh  debug_init_methods.ts  debug_methods.ts  delete_old_circuits.js  direct_init.ts  init_v2_comp_defs.ts  init_v2_simple.ts  init_v3_comp_defs.ts  package-lock.json  package.json  simple_init.js  test-cluster-offset.js  test-single-comp-def.js  test_no_suffix.ts  test_pda_derivation.js  test_program_expectations.js  test_program_logic.js  test_single_v2_init.ts  test_supabase_auth.js  test_v1_init.ts  test_v1_initialization.js  test_v1_initialization_simple.ts  test_v1_simple.js  test_v1_vs_v3.js  tsconfig.json  upload_circuits.js  upload_circuits_to_supabase.js  upload_circuits_with_setup.js  upload_with_fetch.js  verify_key.js  verify_onchain.js  (+1 more)
se_qure/encrypted-ixs/: Cargo.toml
se_qure/encrypted-ixs/src/: analytics_computation.rs  lib.rs  quiz_evaluation.rs  quiz_threshold_check.rs  survey_analytics.rs
se_qure/programs/se_qure/: Cargo.toml
se_qure/scripts/: init_comp_defs.ts
se_qure/tests/: se_qure.ts
(+22 files in other folders)
